services/tls/paperless/paperless-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  labels:
    app.kubernetes.io/name: paperless
  name: paperless
  namespace: home
spec:
  rules:
    - host: papers.ocelotspot.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: paperless
              port:
                name: http
  tls:
    - hosts:
        - papers.ocelotspot.com
      secretName: "papers.ocelotspot.com-tls"
